# sdl_demo

./: .clang-format  .clang-tidy  .editorconfig  .git_archival.txt  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  PROGRESS.md  README.md  button_test_results.json  temp_no_data.html  temp_platform.html
cmake/: ccache.cmake  (+16 more)
data/: CMakeLists.txt
data/include/: images.h
src/examples/: CMakeLists.txt
src/examples/pong/: CMakeLists.txt
src/examples/pong/data/: CMakeLists.txt  download_font.cmake  extract_font.cmake  resources.rc  resources.rc.in
src/examples/pong/exe/: CMakeLists.txt  main.cpp
src/examples/pong/include/: ball.h  constants.h  events.h  game_state.h  paddle.h  player.h  point.h  pong.h  pong_ui.h  renderers.h  timer.h
src/examples/pong/src/: main.cpp  pong.cpp  pong_ui.cpp
src/examples/pong/test/: CMakeLists.txt  ball_test.cpp  paddle_test.cpp  point_test.cpp  pong_test.cpp
src/examples/snake/: CMakeLists.txt
src/examples/snake/exe/: CMakeLists.txt  main.cpp
src/examples/snake/include/: constants.h  linked_hash_deque.h  snake.h  snake_ui.h  state.h
src/examples/snake/src/: snake.cpp  snake_ui.cpp
src/examples/tictactoe/: CMakeLists.txt  README.md
src/examples/tictactoe/data/: CMakeLists.txt  resources.rc
src/examples/tictactoe/exe/: CMakeLists.txt  main.cpp
src/examples/tictactoe/include/: events.h  game_constants.h  tictactoe.h  tictactoe_ui.h
src/examples/tictactoe/src/: main.cpp  tictactoe.cpp  tictactoe_ui.cpp
src/sdl/: CMakeLists.txt
src/sdl/benchmark/: CMakeLists.txt  abstraction_main.cpp  composite_benchmark.cpp  event_system_benchmark.cpp  renderer_benchmark.cpp  surface_benchmark.cpp  texture_benchmark.cpp  window_benchmark.cpp
src/sdl/impl_test/: CMakeLists.txt  event_impl_test.cpp
src/sdl/include/: color.h  constexpr_map.h  event.h  event_processor.h  exception.h  float_rectangle.h  message_box.h  pixel.h  rectangle.h  renderer.h  sdl.h  surface.h  texture.h  user_event.h  window.h
src/sdl/include/sdl/: color.h  constexpr_map.h  event.h  keycodes.h  keymodifiers.h  pixel_access.h  point.h  random.h  rectangle.h  renderer.h  scancodes.h  sdl.h  surface.h  texture.h  timer.h  user_event.h  window.h
src/sdl/src/: event.cpp  event_impl.h  event_processor.cpp  event_processor_impl.h  exception.cpp  float_rectangle_impl.h  message_box.cpp  point.cpp  random.cpp  rectangle.cpp  rectangle_impl.h  renderer.cpp  renderer_impl.h  sdl.cpp  sdl_impl.h  surface.cpp  surface_impl.h  texture.cpp  texture_impl.h  timer.cpp  user_event.cpp  user_event_impl.h  window.cpp  window_impl.h
src/sdl/src/include/: color_impl.h  event_impl.h  message_box_impl.h  point_impl.h  random_impl.h  rectangle_impl.h  renderer_impl.h  sdl_impl.h  surface_impl.h  texture_impl.h  timer_impl.h  user_event_impl.h  window_impl.h
src/sdl/test/: CMakeLists.txt  color_test.cpp  constexpr_map_test.cpp  event_test.cpp  float_rectangle_test.cpp  message_box_test.cpp  point_test.cpp  random_test.cpp  rectangle_test.cpp  renderer_test.cpp  surface_test.cpp  timer_test.cpp  window_test.cpp
src/sdl/test/mocks/: mock_event_bus.h
src/sdl_application/: CMakeLists.txt  sdl_app_callbacks.def
src/sdl_application/include/sdl/: application.h
src/sdl_application/src/: application.cpp
src/sdl_application/test/: application_test.cpp
src/sdl_main/: CMakeLists.txt
src/sdl_main/src/: main.cpp
src/sdl_tools/: CMakeLists.txt
src/sdl_tools/include/: button.h  event_dispatcher.h  event_router.h  sprite.h  sprite_renderer.h
src/sdl_tools/include/sdl/: application.h  button.h  event_registration.h  event_router.h  layer.h  sdl_tools.h  sprite.h  sprite_renderer.h  ticker.h
src/sdl_tools/src/: application.cpp  button.cpp  button_impl.h  event_dispatcher.cpp  event_dispatcher_impl.h  event_registration.cpp  event_router.cpp  sprite.cpp  sprite_impl.h  sprite_renderer.cpp  sprite_renderer_impl.h  ticker.cpp
src/sdl_tools/src/include/: button_impl.h  event_dispatcher_impl.h  event_router_impl.h  sprite_impl.h  sprite_renderer_impl.h  ticker_impl.h
src/sdl_tools/test/: CMakeLists.txt  button_test.cpp  event_router_test.cpp  simple_test.cpp  specific_keyboard_event_test.cpp  sprite_test.cpp  ticker_test.cpp
src/sdl_ttf/: CMakeLists.txt
src/sdl_ttf/include/: text.h  ttf.h  ttf_service.h
src/sdl_ttf/include/sdl/: font.h  text.h  ttf.h  ttf_service.h
src/sdl_ttf/src/: font.cpp  text.cpp  ttf.cpp
src/sdl_ttf/src/include/: font_impl.h  text_impl.h
src/sdl_ttf/test/: CMakeLists.txt  ttf_service_test.cpp
src/sdlpp_ttf/: CMakeLists.txt
src/sdlpp_ttf/include/: font.h  text.h  ttf.h  ttf_service.h
src/sdlpp_ttf/src/: font.cpp  text.cpp  ttf.cpp
src/sdlpp_ttf/src/include/: font_impl.h  text_impl.h
src/sdlpp_ttf/test/: ttf_service_test.cpp
src/snippets/: CMakeLists.txt  README.md  README_SHADER_DEMOS.md  SHADER_ORGANIZATION.md
src/snippets/include/: tiny_ttf.h
src/snippets/shaders/: CMakeLists.txt  README.md  blur.frag  bright_pass.frag  composite.frag  copy.frag  fullscreen.vert  scene.frag  scene.vert  triangle.frag  triangle.vert
src/snippets/src/: application_example.cpp  bloom_shader_demo.cpp  button_test.cpp  custom_event_test.cpp  custom_events_example.cpp  event_adaptor_example.cpp  event_code_test.cpp  font_hello_world.cpp  keyboard_event_example.cpp  lambda_compilation_test.cpp  lambda_event_handler_test.cpp  main.cpp  message_box_demo.cpp  polymorphic_collection.cpp  sdl_driver_test.cpp  shader_demo.cpp  shader_demo_success.cpp  simple_lambda_test.cpp  simple_test.cpp  test_event_routing.cpp  test_sdl_app_event.cpp  visitor_pattern.cpp
src/utils/: CMakeLists.txt
src/utils/include/: constexpr_map.h  thread_safe_queue.h  value_ptr.h
src/utils/test/: test_value_ptr.cpp
src/visitor_pattern_mockup/: CMakeLists.txt
src/visitor_pattern_mockup/exe/: main.cpp
src/visitor_pattern_mockup/include/: legacy_sdk.h  visitor_pattern_legacy_sdk.h
src/visitor_pattern_mockup/src/: legacy_sdk.cpp  main.cpp  visitor_pattern_legacy_sdk.cpp  visitor_pattern_legacy_sdk_impl.h
src/visitor_pattern_mockup/test/: test_conversion.cpp
(+126 files in other folders)
